@@ -1,4 +1,5 @@
 3.6
+ * Add units to stress ouput (CASSANDRA-11352)
  * Clarify ClusteringPrefix hierarchy (CASSANDRA-11213)
  * Always perform collision check before joining ring (CASSANDRA-10134)
  * SSTableWriter output discrepancy (CASSANDRA-11646)
